# libosmocore

./: .gitignore  Makefile  README.md  build.sh  configure.ac  docker-compose.yml
docker/: Dockerfile.freertos  Dockerfile.linux
include/osmocom/core/: Makefile.am  freertos_sock_shim.h  freertos_tcp_compat.h  socket_compat.h.tpl  talloc.h
scripts/: build-libosmocore-freertos.sh  freertos_deps_fetch.sh  freertos_env.sh  run-freertos-tests.sh  upstream_sync.sh
src/: Makefile.am
src/core/: Makefile.am  freertos_bsd_wrappers.c  freertos_sock_shim.c  freertos_tcp_compat.c  libosmocore.map  logging.c  osmo_io_internal.h  socket_freertos.c
src/pseudotalloc/: Makefile.am  pseudotalloc_fallback.c  talloc.h
tests/: Makefile.am  pseudotalloc_test_stub.c
